# squirrels-examples

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose-local.yml  docker-compose.yml  index.html  main.py  nginx-local.conf  nginx.conf  pyproject.toml  requirements.txt
expenses/: squirrels.yml
expenses_no_python/: squirrels.yml
sqrl-mortgage-analysis/: .dockerignore  .env.example  Analysis.ipynb  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  nginx-local.conf  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-direct.txt  requirements.in  requirements.txt  squirrels.yml
sqrl-mortgage-analysis/dashboards/: simulation_percentiles.py  simulation_percentiles.yml
sqrl-mortgage-analysis/models/archive/: amortization.py
sqrl-mortgage-analysis/models/federates/: amortization.sql  amortization.yml  simulations.py  simulations.yml  single_scenario.py  single_scenario.yml
sqrl-mortgage-analysis/nginx/: nginx.conf
sqrl-mortgage-analysis/pyconfigs/: connections.py  context.py  parameters.py
sqrl-mortgage-analysis/seeds/: seed_snp500.csv  seed_snp500.yml
sqrl-weather-analytics/: .dockerignore  .env.example  .env.local.example  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt  squirrels.yml
sqrl-weather-analytics/assets/: env_example.yml  ice_cream_sales_model.pkl
sqrl-weather-analytics/dashboards/: ice_cream_actual_vs_expected.py  ice_cream_actual_vs_expected.yml
sqrl-weather-analytics/macros/: weather_metrics.sql
sqrl-weather-analytics/models/: sources.yml
sqrl-weather-analytics/models/dbviews/: dbv_ice_cream_sales.sql  dbv_ice_cream_sales.yml  dbv_weather_by_date.sql  dbv_weather_by_date.yml
sqrl-weather-analytics/models/federates/: ice_cream_sales_trend.py  ice_cream_sales_trend.yml  weather_by_period.sql  weather_by_period.yml  weather_trend.sql  weather_trend.yml
sqrl-weather-analytics/pyconfigs/: connections.py  context.py  parameters.py
sqrl-weather-analytics/resources/: ice_cream_sales_model.json
sqrl-weather-analytics/seeds/: seed_month_names.csv  seed_month_names.yml
(+98 files in other folders)
