[project]
name = "squirrels-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "duckdb-engine>=0.17.0",
    "fastapi>=0.128.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "squirrels",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
squirrels = { git = "https://github.com/squirrels-analytics/squirrels" }
