[project]
name = "sqrl-mortgage-analysis"
version = "0.1.0"
description = "Example Squirrels project of mortgage analytics"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "scipy>=1.16.1",
    "squirrels",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
squirrels = { git = "https://github.com/squirrels-analytics/squirrels" }
