[project]
name = "sqrl-weather-analytics"
version = "0.1.0"
description = "Example Squirrels project for weather analytics"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "duckdb-engine>=0.17.0",
    "scikit-learn>=1.5.1",
    "squirrels",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
squirrels = { git = "https://github.com/squirrels-analytics/squirrels" }
